--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/app.js",
     "dev": "nodemon src/app/bin/www.ts",
-    "build": "tsc -p ."
+    "build": "tsc -p .",
+    "heroku-postbuild": "echo Skip build on Heroku"
   },
   "author": "",
   "license": "ISC",
@@ -23,5 +24,6 @@
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
-  }
+  },
+  "heroku-run-build-script": true
 }
