--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ls",
+    "start": "node dist/app/bin/www.ts",
     "dev": "nodemon src/app/bin/www.ts",
     "build": "tsc -p .",
     "heroku-postbuild": "npm run build"
