--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.7"
+    "mongoose": "^5.9.7",
+    "dotenv": "^8.2.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^13.11.1",
-    "dotenv": "^8.2.0",
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
