--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/express": "^4.17.6",
     "@types/mongoose": "^5.7.10",
     "@types/node": "^13.11.1",
+    "express-sanitizer": "^1.0.5",
     "nodemon": "^2.0.3",
     "ts-node": "^8.8.2",
     "typescript": "^3.8.3"
